2006-12-01  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.h: Fix typos.  Wow, welcome Planet GNOME hackers!

2006-12-01  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe-private.h: Add format(printf) attributes to some functions.

	* probes/pango-glyph_extents.probe: New sample probe.

2006-02-12  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.h, bprobe-private.h: Make PID accessible everywhere.

2006-02-12  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.h, bprobe-private.h: Implement DUMP_CORE, SPAWN_SYNC,
	SPAWN_ASYNC, and SPAWN_ASYNC_WAIT.

2006-02-12  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.h, bprobe-private.h: Implement STACK_TRACE and
	ATTACH_DEBUGGER.

	* probes/pango-unknown_glyphs.probe: Dump an stack trace if
	font is NULL.

2006-02-08  Behdad Esfahbod  <behdad@gnome.org>

	* probes/fontconfig.probe, pango-break.probe: Add magic opening
	line to call bprobe.py on self and run command.

2006-02-08  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.py: Add --run.

	* probes/pango-unknown_glyphs.probe: Add magic opening line to
	call bprobe.py to run self, if runned in the shell.

2006-02-08  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.h, bprobe-private.h, bprobe.py: Define MAIN and --main.

2006-02-08  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.h (SUPER, FUNC): Improve docs.

	* bprobe.h (DEBUG), bprobe-private.h: Add another level of error
	reporting.

	* bprobe-private.h: Err on no-gcc only during compilation, not
	preprocessing.

	* TODO: Add DEPENDS(list).

2006-02-07  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.py: Do not try to unlink if the file is not there.

	* probes/fontconfig.probe: Link to fontconfig, as we call
	FcPatternPrint directly.

2006-02-07  Behdad Esfahbod  <behdad@gnome.org>

	* Initial import.