@@ -1,3 +1,9 @@
+2007-09-08  Behdad Esfahbod  <behdad@gnome.org>
+
+	* bprobe-private.h:
+	* bprobe.h:
+	Implement BPROBE_BRAKE_POINT.
+
 2006-12-01  Behdad Esfahbod  <behdad@gnome.org>
 
 	* bprobe.h: Fix typos.  Wow, welcome Planet GNOME hackers!
